--- a/sobreNeuquen.html
+++ b/sobreNeuquen.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navegación"> <!--Barra de navegación-->
             <button class="navbutton"> <a href="/index.html">Inicio</a></button>
-            <button class="navbutton"> <a href=#Quienessomos>Quiénes somos</a></button>
+            <button class="navbutton"> <a href="/quienesSomos.html">Quiénes somos</a></button>
             <button class="navbutton"> <a href=#Regiones>Regiones</a></button>
             <button class="navbutton"> <a href="/sobreNeuquen.html">Sobre Neuquén</a></button>
             <button class="navbutton"> <a href=#CalendariodeFiestas> Calendario de Fiestas</a></button>
